# concert-api

./: docker-compose.yml  pyproject.toml
app/: settings.py
app/api/: routers.py  schemas.py
app/infrastructure/messaging/: celery_app.py
app/infrastructure/models/: concert_model.py
app/infrastructure/workers/: celery.Dockerfile  dispatcher.py  email.py  slack.py  whatsapp.py  worker.py
backend/: pyproject.toml
backend/app/: main.py  settings.py
backend/app/api/: routers.py  schemas.py
backend/app/application/services/: concert_service.py
backend/app/infrastructure/: Dockerfile  init.sql
backend/app/infrastructure/database/: connection.py
backend/app/infrastructure/models/: concert_model.py
backend/app/infrastructure/repositories/: concert_repository.py
frontend/src/: App.tsx  styles.css
