[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "thallys",email = "thallys.rc@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (==0.121.2)",
    "gunicorn (==23.0.0)",
    "sqlalchemy (==2.0.44)",
    "psycopg2-binary (==2.9.11)",
    "azure-storage-blob (==12.27.1)",
    "python-multipart (==0.0.20)",
    "uvicorn (==0.38.0)",
    "pydantic (==2.12.4)",
    "pydantic-settings (==2.12.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
